<resources>
    <string name="app_name">FlashCard</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type">Category</string>
    <string name="title">Title</string>
    <string name="add">Add</string>
    <string name="HeaderImage">Header Image </string>
    <string name="camera">camera</string>
    <string name="hintTitle">Enter your goal!</string>
    <string name="work">Work</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="personalGrowth">Personal Growth</string>
    <string name="deleting">You successful deleted %s</string>
    <string name="deleting_all">Are you sure to delete all items?</string>
    <string name="catImg">Category Image</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="completed">completed</string>
    <string name="closeDetail">close detail</string>
    <string name="settings">Settings</string>
    <string name="detail">Details</string>
    <string name="info">Info</string>
    <string name="show_all">Show all plans</string>
    <string name="hide_completed">Hide completed plans</string>
    <string name="Your_goal">My Plans</string>
    <string name="hide_image">Hide the images</string>
    <string name="hide_category">Hide the labels</string>
    <string name="copyright">Copyright&#169; 2020,Xinyi</string>
    <string name="app_img">App Image</string>
    <string name="time_build">Build Time</string>
    <string name="status">status</string>
    <string name="cheer_up">Cheer up for you</string>
    <string name="status_completed">Status: Completed</string>
    <string name="status_good_job">\"Good job! \"</string>
    <string name="status_uncompleted">Status: Uncompleted</string>
    <string name="lets_do_this">\"Let\'s do this! \"</string>
    <string name="click_to_get_cheered">Click on the image to get cheered</string>


    <string-array name="typesArray">
        <item>Work</item>
        <item>Lifestyle</item>
        <item>Personal Growth</item>
    </string-array>

</resources>
