<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:navGraph="@navigation/nav_graph"
    android:background="#FDD8B9"
    tools:context=".ui.main.SettingsFragment">

    <TextView
        android:id="@+id/settings_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/hide_img_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hide_image"
        android:thumbTint="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/hide_completed_switch"
        app:layout_constraintTop_toBottomOf="@+id/settings_title_textView" />

    <Switch
        android:id="@+id/hide_completed_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hide_completed"
        android:thumbTint="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hide_img_switch" />

    <Switch
        android:id="@+id/hide_label_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/hide_category"
        android:thumbTint="@android:color/holo_red_light"
        app:layout_constraintStart_toStartOf="@+id/hide_completed_switch"
        app:layout_constraintTop_toBottomOf="@+id/hide_completed_switch" />

</androidx.constraintlayout.widget.ConstraintLayout>