<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.xchen92.flashcard.database.Item" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recycler_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f8cfff"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/photo_imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/catImg"
            app:imageResource="@{item.typeImage}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/work" />

        <TextView
            android:id="@+id/category_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="130dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{item.typeName}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photo_imageView"
            app:layout_constraintTop_toTopOf="@+id/photo_imageView"
            tools:text="@string/type" />


        <TextView
            android:id="@+id/title_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@{item.title}"
            app:layout_constraintStart_toStartOf="@+id/category_textView"
            app:layout_constraintTop_toBottomOf="@+id/category_textView"
            tools:text="@string/title" />

        <CheckBox
            android:id="@+id/recycler_completed_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@{item.completed}"
            android:text="@string/completed"
            app:layout_constraintBottom_toBottomOf="@+id/category_textView"
            app:layout_constraintStart_toEndOf="@+id/category_textView"
            app:layout_constraintTop_toTopOf="@+id/category_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>